Replaced Grunt with Webpack.

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Practical Elm - Data Paging</title>
-        <script src="/Main.compiled.js"></script>
+        <script src="bundle.js" defer></script>
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/pure-min.css">
         <style>
             button {
@@ -20,10 +20,5 @@
             }
         </style>
     </head>
-    
-    <body>
-        <script>
-            Elm.Main.fullscreen();
-        </script>
-    </body>
+    <body></body>
 </html>
